--- a/mportfolio.html
+++ b/mportfolio.html
@@ -118,7 +118,7 @@
 
 		
 
-		<div class="col-md-10 col-md-offset-1 col-xs-12">
+		<div class="col-md-6 col-md-offset-3 col-xs-12">
 
 			<img class="col-md-8 col-xs-12" src="imgs/mportfolio/phase1.png">
 
@@ -402,7 +402,7 @@
 
 	</div>
 	
-	<div class="col-md-10 col-md-offset-1 col-xs-12">
+	<div class="col-md-6 col-md-offset-3 col-xs-12">
 
 			<img class="col-md-12 col-xs-12" src="imgs/mportfolio/phase2.png">
 
@@ -535,9 +535,8 @@
 
 	</div>
 
-	<div class="col-md-10 col-md-offset-1 col-xs-12">
-
-			<img class="col-md-12 col-xs-12" src="imgs/mportfolio/phase1.png">
+	<div class="col-md-10 col-md-offset-2 col-xs-12">
+<iframe src="https://player.vimeo.com/video/166780743?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 	</div>
 
@@ -553,25 +552,29 @@
 
 	</div>
 
-	<div class="col-md-12 col-xs-12">
 
-		<p>Finding 3</p>
+		
+	
+
 
 	</div>
 
 
-	<div class="col-md-10 col-md-offset-1 col-xs-12">
+		<div class="col-md-12">
+		
+		<h3>CONCLUSION</h3>
+		<hr>
 
-			<img class="col-md-12 col-xs-12" src="imgs/mportfolio/ue_f3.png">
+		<div class="col-md-12 col-xs-12">
 
-	</div>
-
-
-	<div class="col-md-10 col-md-offset-1 col-xs-12">
-
-			<img class="col-md-12 col-xs-12" src="imgs/mportfolio/ue_r3.png">
+		<p>These were some of the highlighted findings and recommendations. The detailed reports of our 3 month study are available upon request!</a></p>
 
 	</div>
+	
+
+
+
+			<hr>
 
 		
 	
