dei_change  responsive

--- a/dei.html
+++ b/dei.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>MPortfolio</title>
+	<title>DEI</title>
 	<link href="css/projectpage.css" rel="stylesheet">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
 </head>
@@ -254,7 +254,7 @@
 
 
 
-<footer>		<hr><a href="http://www.freepik.com/free-photos-vectors/business">Business vector designed by Freepik</a>
+<footer style="text-align:center;">		<hr><a href="http://www.freepik.com/free-photos-vectors/business">Business vector designed by Freepik</a></br></br>
 </footer>
 
 
