--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
 			    </div>
 			    
-				<div class="col-md-6">
+				<div class="col-md-6 col-xs-12">
 					<img src="imgs/washable.png" class="image" style="padding-top:10%;">
 				</div>
 				
