--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 	<div class="col-md-3 col-xs-12 sidebar">
 		<h2 style="font-family:'Varela Round';">Hi! I'm Kanchi,</h2>
-		<p style="color:grey;line-height:200%;">an ideator, a storyteller, <a target="_blank" href="https://www.flickr.com/gp/138115086@N08/p4L811">a photographer</a> and dog lover! </br></br>My design efforts are driven by a need to bridge utilities and user psyche seamlessly for a streamlined user experience!</br></br></br></p>
+		<p style="color:grey;line-height:200%;">an ideator, a storyteller, <a target="_blank" href="https://www.flickr.com/gp/138115086@N08/p4L811">a photographer</a> and developer! </br></br>My design efforts are driven by a need to bridge utilities and user psyche seamlessly for a streamlined user experience and are backed by three years of professional software based product research, design and development !</br></br></br></p>
 		<div style="text-align:center;">
 			<a target="_blank" href="resources/Resume.pdf" class="btn btn-default btn-lg">Resume</a>
 
