--- a/dei.html
+++ b/dei.html
@@ -27,7 +27,7 @@
 		<div class="col-md-8" style="margin-top:3%;">
 		<h4>PROBLEM</h4>
 		
-		<p><b>Representing the Design Clinic at the School of Information, I along with 3 other group members worked as UX consultants and designers to design the User Experience and the User Interface of the pilot phase for the Entrepreneurship Greenhouse website.</b></p>
+		<p>Representing the Design Clinic at the School of Information, I along with 3 other group members worked as UX consultants and designers to design the User Experience and the User Interface of the pilot phase for the Entrepreneurship Greenhouse website.</p>
 	</div> 
 
 		<div class="col-md-4" style="margin-top:3%;">
@@ -92,14 +92,14 @@
 		
 		<h3>INFORMATION ARCHITECHTURE</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>For the pilot phase, this information flow would be comprised of  9 videos and four questions.</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12 col-xs-12" src="imgs/dei/flowchart.svg">
+		<img class="col-md-8 col-md-offset-2 col-xs-12" src="imgs/dei/flowchart.svg">
 
 		</div>
 	</div>
@@ -108,7 +108,7 @@
 		
 		<h3>PROBLEM STATEMENT</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>- We met with the client to at this stage and were assigned with the problem statement. From the meeting we understood that we needed to translate this flowchart into a 'bitesized' intuitive and quickly navigable website . The key phrases we decided to focus on before starring out on our design were : </p>
 		<ul>
 			<li>'Make your own adventure'</li>
@@ -118,9 +118,9 @@
 		</ul>
 		<p>Based upon the above prompt, the design challenge could be divided into two main parts:</p>
 		</div>
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12 col-xs-12" src="imgs/dei/problem_statement.png">
+		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/dei/problem_statement.png">
 
 		</div>
 
@@ -134,7 +134,7 @@
 		<p>For this particular project, the comparative analysis consisted more of drawing inspiration from various MOOCs and video sharing platforms to find the little things they were doing best and trying to find inspiration for our design for both our sections.</br></br></br></p>
 		</div>
 		<div class="col-md-12 col-xs-12">
-			<img class="col-md-12 col-xs-12" src="imgs/dei/ca1.svg">
+			<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/dei/ca1.svg">
 		</div>
 		<div class="col-md-12 col-xs-12">
 			<img class="col-md-12 col-xs-12" src="imgs/dei/ca2.svg">
@@ -199,14 +199,14 @@
 		
 		<h3>STYLE GUIDE & HI-FI PROTOTYPES</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>We then met with the client to decide upon the navigation style and then proceed to make numerous Hifi prototypes as well. We also decided upon the style guide and color scheme for the website</p>
 		</div>
 
 
 		<div class="col-md-8 col-xs-12">
 
-		<img class="col-md-6 col-md-offset-4 col-xs-12" src="imgs/dei/color_scheme.png">
+		<img class="col-md-6 col-md-offset-5 col-xs-12" src="imgs/dei/color_scheme.png">
 
 		</div>
 
