--- a/fixit.html
+++ b/fixit.html
@@ -70,14 +70,14 @@
 		
 		<h3>PROBLEM SCOPING</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>After identifying the problem space I started enlisting drawbacks within the process currently being followed in order to help me decide its scope and start thinking about solution alternatives</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/ideation.png">
+		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/ideation.png">
 
 		</div>
 	</div>
@@ -86,16 +86,16 @@
 		
 		<h3>SOLUTION IDEAS</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>After the initial phase, I came up with 6 possible solutions that could be used/ were being used to solve the current issues. Out of these I narrowed down on selecting the alternative of designing a mobile application to solve the problem in question.The reasons for selecting a mobile phone as a medium were as follows: 
-		</br><br>- Easy integration with the camera to report issues
-		</br><br>- Push notification services could be leveraged for inspection appointments and reminders</p>
+		</br>- Easy integration with the camera to report issues
+		</br>- Push notification services could be leveraged for inspection appointments and reminders</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12  col-xs-12" src="imgs/solution_ideas.jpg">
+		<img class="col-md-6 col-md-offset-3  col-xs-12" src="imgs/solution_ideas.jpg">
 
 		</div>
 	</div>
@@ -105,14 +105,14 @@
 		
 		<h3>USER SURVEY</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>After narrowing down to a solution, I sent out a survey to potential users to get an idea if the initial solution would work and understand the problem space better.</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/survey-1.png">
+		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/survey-1.png">
 
 		</div>
 	</div>
@@ -121,7 +121,7 @@
 		
 		<h3>COMPETETIVE ANALYSIS</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>In the competitive analysis it was found that although the different apps in the same domain cover different features , there is an overall problem regarding the focus of the application.
 
 		The applications focus on a wide variety of features and their placement isn't really well done. 
@@ -130,9 +130,9 @@
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/ca.png">
+		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/ca.png">
 
 		</div>
 	</div>
@@ -141,14 +141,14 @@
 		
 		<h3>USER INTERVIEWS AND PERSONAS</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>I conducted interviews and subsequently prepared personas to describe target users. I also created on anti-persona to describe a non-user of the system.</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/persona.png">
+		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/persona.png">
 
 		</div>
 	</div>
@@ -157,14 +157,14 @@
 		
 		<h3>STORYBOARDING</h3>
 		<hr>
-		<div class="col-md-3">
+		<div class="col-md-12">
 		<p>I later on created a storyboard to describe how a user would use the mobile application.</p>
 		</div>
 
 
-		<div class="col-md-9 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12  col-xs-12" src="imgs/storyboarding.png">
+		<img class="col-md-10 col-md-offset-1  col-xs-12" src="imgs/storyboarding.png">
 
 		</div>
 	</div>
@@ -173,7 +173,7 @@
 		
 		<h3>BRAINSTORMING</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>I had a brainstorming session with three other peers during which I realized that the scope of my application was getting too broad. 
 
 		I was trying to include too many features in order to increase the frequency of use of the application.
@@ -182,9 +182,9 @@
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12 col-xs-12" src="imgs/brainstorming.jpg">
+		<img class="col-md-8 col-md-offset-2 col-xs-12" src="imgs/brainstorming.jpg">
 
 		</div>
 	</div>
@@ -193,14 +193,14 @@
 		
 		<h3>QOC'S</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>I used the Questions, Options & Constraints model to determine the major interactions of the mobile application</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12 col-xs-12" src="imgs/qoc.jpg">
+		<img class="col-md-8 col-md-offset-2 col-xs-12" src="imgs/qoc.jpg">
 
 		</div>
 	</div>
@@ -210,12 +210,12 @@
 		
 		<h3>WIREFRAMING</h3>
 		<hr>
-		<div class="col-md-3">
+		<div class="col-md-12">
 		<p>Based on the QOC's model, I sketched wireframes for the application.After identifying "tracking" as the key feature of the application, I created three flows for the same.</p>
 		</div>
 
 
-		<div class="col-md-9 col-xs-12">
+		<div class="col-md-10 col-md-offset-1 col-xs-12">
 
 		<img class="col-md-6 col-xs-12" src="imgs/wireframe.jpg">
 		<img class="col-md-6 col-xs-12" src="imgs/wireframe2.jpg">
@@ -227,14 +227,14 @@
 		
 		<h3>PAPER PROTOTYPING</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>I created the paper prototype combining ideas from two flows created in the wireframe.</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12 col-xs-12" src="imgs/paper.jpg">
+		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/paper.jpg">
 
 		</div>
 	</div>
@@ -243,14 +243,14 @@
 		
 		<h3>USABILITY TESTING</h3>
 		<hr>
-		<div class="col-md-4">
+		<div class="col-md-12">
 		<p>After creating the paper prototype, I conducted a usability test of the paper prototype on graduate students in the University of Michigan. The feedback received made me realize that my prototype was aesthetically appealing but not very usable. I got feedback from my peers and decided to re-design the layout of the information to make it simple and easy to use.</p>
 		</div>
 
 
-		<div class="col-md-8 col-xs-12">
+		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-12 col-xs-12" src="imgs/usability_2.jpg">
+		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/usability_2.jpg">
 		
 
 		</div>
@@ -285,12 +285,12 @@ Following mock ups depicts the home screen of the application. It is a quick ove
 		
 		<h3>VIDEO</h3>
 		<hr>
-		<div class="col-md-6">
+		<div class="col-md-12">
 		<p>Video of the end-to-end working prototype.</p>
 		</div>
 
 
-		<div class="col-md-6  col-xs-12">
+		<div class="col-md-6  col-md-offset-4 col-xs-12">
 		<iframe src="https://player.vimeo.com/video/165768556?color=ffffff&title=0&byline=0&portrait=0" width="360" height="682" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 	</div>
 	</div>
