--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 			<p><a style="color: black;" href="aboutme.html">About Me</a></p>
 			<p><a style="color: black;" target="_blank" href="resources/Resume.pdf">Resume</a></p>
-			<p><a style="color: black;" target="_blank" href="rhttps://docs.google.com/presentation/d/1yXqmMBA8iQP85TfSU5GuKJWWyJyiGXhFOpJFZUgFZHA/edit?usp=sharing">Presentation</a></p>
+			<p><a style="color: black;" target="_blank" href="https://docs.google.com/presentation/d/1yXqmMBA8iQP85TfSU5GuKJWWyJyiGXhFOpJFZUgFZHA/edit?usp=sharing">Presentation</a></p>
 
 
 
