--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<div class="col-md-3 col-md-offset-2">
 
 
-				<h3 style="text-align:left; margin-top: 5%;	font-family: 'Montserrat', sans-serif;"> <a  href="index.html">Portfolio</a></h3>
+				<h3 style="text-align:left; margin-top: 5%;	font-family: 'Montserrat', sans-serif;"> <a  href="Resume.pdf">Resume</a></h3>
 
 				</div>
 			   
