--- a/605.html
+++ b/605.html
@@ -72,7 +72,7 @@
 
 		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-6 col-md-offset-3  col-xs-12" src="imgs/tt 2.png">
+		<img class="col-md-10 col-md-offset-1  col-xs-12" src="imgs/tt 2.png">
 
 		</div>
 	</div>
@@ -87,9 +87,9 @@
 		</div>
 
 
-		<div class="col-md-12 col-xs-12">
+		<div class="col-md-10 col-md-offset-1 col-xs-12">
 
-		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/reporting.png">
+		<img class="col-md-12 col-xs-12" src="imgs/reporting.png">
 
 		</div>
 	</div>
@@ -118,7 +118,7 @@
 
 		<div class="col-md-12 col-xs-12">
 
-		<img class="col-md-6 col-md-offset-3 col-xs-12" src="imgs/sanity.png">
+		<img class="col-md-10 col-md-offset-1 col-xs-12" src="imgs/sanity.png">
 
 		</div>
 	</div>
